@@ -2,7 +2,7 @@
 <xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 <xsl:output method="text" />
 <xsl:template match="/feynml">
-// Transformation: fml2fmf.xslt
+// Transformation: fml2math.xslt
 <xsl:for-each select="head">
 <xsl:for-each select="meta">// <xsl:value-of select="@name" />: <xsl:value-of select="@value" />
 </xsl:for-each>
